bt5_firewall/susefirewall.log
# Generated by iptables-save v1.4.6 on Tue Oct  9 18:57:52 2012
*raw
:PREROUTING ACCEPT [501:560658]
:OUTPUT ACCEPT [328:17850]
-A PREROUTING -i lo -j NOTRACK 
-A OUTPUT -o lo -j NOTRACK 
COMMIT
# Completed on Tue Oct  9 18:57:52 2012
# Generated by iptables-save v1.4.6 on Tue Oct  9 18:57:52 2012
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [328:17850]
:forward_ext - [0:0]
:input_ext - [0:0]
:reject_func - [0:0]
-A INPUT -i lo -j ACCEPT 
-A INPUT -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -m state --state RELATED -j ACCEPT 
-A INPUT -i eth0 -j input_ext 
#-A INPUT -i pan0 -j input_ext 
#-A INPUT -i wlan0 -j input_ext 
-A INPUT -j input_ext 
-A INPUT -m limit --limit 3/min -j LOG --log-prefix "SFW2-IN-ILL-TARGET " --log-tcp-options --log-ip-options 
-A INPUT -j DROP 
-A FORWARD -m physdev --physdev-is-bridged -j ACCEPT 
-A FORWARD -m limit --limit 3/min -j LOG --log-prefix "SFW2-FWD-ILL-ROUTING " --log-tcp-options --log-ip-options 
-A OUTPUT -o lo -j ACCEPT 
-A input_ext -m pkttype --pkt-type broadcast -j DROP 
-A input_ext -p icmp -m icmp --icmp-type 4 -j ACCEPT 
-A input_ext -p icmp -m icmp --icmp-type 8 -j ACCEPT 
-A input_ext -m limit --limit 3/min -m pkttype --pkt-type multicast -j LOG --log-prefix "SFW2-INext-DROP-DEFLT " --log-tcp-options --log-ip-options 
-A input_ext -m pkttype --pkt-type multicast -j DROP 
-A input_ext -m pkttype --pkt-type broadcast -j DROP 
-A input_ext -p tcp -m limit --limit 3/min -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j LOG --log-prefix "SFW2-INext-DROP-DEFLT " --log-tcp-options --log-ip-options 
-A input_ext -p icmp -m limit --limit 3/min -j LOG --log-prefix "SFW2-INext-DROP-DEFLT " --log-tcp-options --log-ip-options 
-A input_ext -p udp -m limit --limit 3/min -m state --state NEW -j LOG --log-prefix "SFW2-INext-DROP-DEFLT " --log-tcp-options --log-ip-options 

#open http and ssh ports
-A input_ext -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A input_ext -m state --state NEW -m tcp -p tcp --dport 80 -j ACCEPT

# prevent ssh brute force attack
-N LOGDROP
-A LOGDROP -j LOG
-A LOGDROP -j DROP
-I input_ext -p tcp --dport 22 -i eth0 -m state --state NEW -m recent --set
-I input_ext -p tcp --dport 22 -i eth0 -m state --state NEW -m recent  --update --seconds 60 --hitcount 4 -j LOGDROP

-A input_ext -j DROP 
-A reject_func -p tcp -j REJECT --reject-with tcp-reset 
-A reject_func -p udp -j REJECT --reject-with icmp-port-unreachable 
-A reject_func -j REJECT --reject-with icmp-proto-unreachable 
COMMIT
# Completed on Tue Oct  9 18:57:52 2012
